--- a/templates/video-detail/video-detail.css
+++ b/templates/video-detail/video-detail.css
@@ -1,1 +1,121 @@
-/* home page specific styles */
+.video-detail main {
+    h1 {
+        font-size: var(--heading-font-size-l);
+    }
+
+    .section-outer {
+        margin: unset;
+
+        > .section {
+            padding: 0 15px;
+        }
+
+        &:last-of-type {
+            margin-top: 50px;
+
+            .default-content-wrapper {
+                text-align: center;
+            }
+        }
+
+        h2 {
+            font-size: var(--body-font-size-m);
+            font-weight: var(--font-weight-bold);
+            text-transform: none;
+            font-family: var(--body-font-family);
+            color: var(--text-color);
+        }
+
+        .related-title {
+            font-family: var(--body-font-family);
+            font-size: var(--body-font-size-m);
+            color: var(--text-color);
+        }
+    }
+
+    .tabs {
+        .tabs-panel {
+           margin-top: 10px;
+            border-top: 1px solid var(--light-grey);
+            padding: 24px 0;
+        }
+        .tabs-list {
+        gap: 0;
+        width: unset;
+
+        button {
+            border-radius: 4px 4px 0 0;
+            font-weight: var(--font-weight-light);
+            padding: .75rem 1rem;
+            font-size: var(--body-font-size-s);
+            background-color: transparent;
+            border: 0;
+            color: var(--product-red);
+
+            &:hover {
+                background-color: var(--divider-gray);
+            }
+
+            &[aria-selected='true'] {
+                border-top: 1px solid var(--light-grey);
+                border-left: 1px solid var(--light-grey);
+                border-right: 1px solid var(--light-grey);
+                color: var(--text-color);
+            }
+        }
+    }
+    }
+}
+
+@media (width >= 768px) {
+    .video-detail main {
+        .section-outer .section {
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+}
+
+@media (width >= 1024px) {
+    .video-detail main {
+        display: grid;
+        grid-template-areas:
+        "breadcrumb breadcrumb"
+        "content sidebar"
+    "content sidebar";
+        column-gap: 40px;
+        position: relative;
+        max-width: unset;
+
+        .section-outer:not(last-of-type) {
+            grid-area: auto / content;
+            max-width: 660px;
+            justify-self: end;
+            grid-template-rows: max-content;
+        }
+
+        .section-outer:last-of-type {
+            grid-area: sidebar;
+            justify-self: start;
+            grid-row-end: last-line;
+
+            .section {
+                width: 240px;
+            }
+        }
+    }
+}
+
+@media (width >= 1200px) {
+    .video-detail main {
+        .section-outer:not(last-of-type) {
+            max-width: 800px;
+        }
+
+        .section-outer:last-of-type .section {
+            width: 320px;
+            margin-top: 80px;
+        }
+    }
+}
