--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,8 +2,51 @@
   width: 100%;
   border-top: 1px solid #cbcbcb;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.cards.suggested-videos .card>a::before {
+  display: inline-block;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 3em;
+  color: #888;
+  line-height: 1;
+  z-index: 2;
 }
 
 .cards.suggested-videos .card>a {
+  display: block;
   pointer-events: none;
+  text-align: center;
+}
+
+.cards.suggested-videos .card>a img {
+  height: 80px;
+  width: 80px;
+  position: relative;
+  top: 25px;
+    left: 0;
+    border-radius: 50%;
+}
+
+.cards.suggested-videos .card .card-body {
+  display: flex;
+  position: relative;
+  top: 50%;
+  transform: translate(5%, 50%);
+}
+
+.cards.suggested-videos .card .card-body a{
+  display: none;
+}
+
+/* just show the first a */
+.cards.suggested-videos .card .card-body a:first-of-type {
+  display: flex;
 }
