--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,3 +1,15 @@
+.cards.suggested-videos {
+  margin: 20px 0;
+}
+
+.cards.suggested-videos h3{
+  font-family: var(--body-font-family);
+  font-size: 18px;
+  font-weight: 500;
+  color: inherit;
+  margin-bottom: 1em;
+}
+
 .cards.suggested-videos .card-wrapper{
   display: flex;
   flex-direction: column;
@@ -11,37 +23,50 @@
   padding: 25px 0;
 }
 
+.cards.suggested-videos .card.block:last-of-type {
+  border-bottom: 1px solid #cbcbcb;
+}
+
 .cards.suggested-videos .card.block>div {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
 }
 
-.cards.suggested-videos .card>a::before {
+.cards.suggested-videos .card img::before {
   display: inline-block;
   width: auto;
   height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: 3em;
   color: #888;
   line-height: 1;
   z-index: 2;
+  font-size: 2em;
+  margin-top: -25px;
+  margin-left: -15px;
 }
 
-.cards.suggested-videos .card>a {
+.cards.suggested-videos .card > a {
   display: block;
   pointer-events: none;
   text-align: center;
 }
 
-.cards.suggested-videos .card>a img {
-  height: 80px;
+.cards.suggested-videos .card > a picture {
   width: 80px;
+  height: 80px;
+  margin: 0 auto;
+}
+
+.cards.suggested-videos .card>a img {
+  border-radius: 50%;
   position: relative;
-    left: 0;
-    border-radius: 50%;
+  left: 0;
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
 }
 
 .cards.suggested-videos .card .card-body {
@@ -52,7 +77,7 @@
 }
 
 .cards.suggested-videos .card .card-body h3 {
- font-family: var(--body-font-family);
+  font-weight: 700;
 }
 
 .cards.suggested-videos .card .card-body a{
@@ -62,4 +87,5 @@
 /* just show the first a */
 .cards.suggested-videos .card .card-body a:first-of-type {
   display: flex;
+  text-decoration: none;
 }
