--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,8 +4,8 @@
 
 .cards.suggested-videos h3{
   font-family: var(--body-font-family);
-  font-size: 18px;
-  font-weight: 500;
+  font-size: var(--body-font-size-m);
+  font-weight: var(--font-weight-medium);
   color: inherit;
   margin-bottom: 1em;
 }
@@ -19,12 +19,12 @@
 
 .cards.suggested-videos .card.block {
   width: 100%;
-  border-top: 1px solid #cbcbcb;
+  border-top: 1px solid var(--light-grey);
   padding: 25px 0;
 }
 
 .cards.suggested-videos .card.block:last-of-type {
-  border-bottom: 1px solid #cbcbcb;
+  border-bottom: 1px solid var(--light-grey);
 }
 
 .cards.suggested-videos .card.block>div {
@@ -77,7 +77,7 @@
 }
 
 .cards.suggested-videos .card .card-body h3 {
-  font-weight: 700;
+  font-weight: var(--font-weight-extra-bold);
 }
 
 .cards.suggested-videos .card .card-body a{
