--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,3 +1,7 @@
+.card-wrapper {
+    margin-bottom: 1em;
+}
+
 .card {
     overflow: hidden;
     height: auto;
@@ -22,9 +26,15 @@
 }
 
 .card h3 {
-    font-size: var(--body-font-size-s);
+    font-size: var(--body-font-size-m);
     font-family: var(--body-font-family);
     font-weight: var(--font-weight-medium);
+    margin-top: .75em;
+    line-height: 1.35;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .card .card-body p {
