--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -14,6 +14,10 @@
     }
 }
 
+.card a {
+    text-decoration: none;
+}
+
 .card .card-body p {
     font-weight: var(--font-weight-normal);
     color: var(--charcoal-blue);
