--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,88 +1,219 @@
+/* stylelint-disable no-descending-specificity */
+.cards:not(.suggested-videos) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+
+  .card {
+    margin-bottom: 20px;
+    padding: 0 10px;
+    overflow: hidden;
+    height: auto;
+    position: relative;
+  }
+
+  .card a {
+    display: inline-block;
+    max-width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .card img {
+    transition: all .65s ease;
+  }
+
+  .card:hover img {
+    transform: scale(1.05);
+    transform-style: preserve-3d;
+  }
+
+  .card h3 {
+    font-size: var(--body-font-size-s);
+    font-family: var(--body-font-family);
+    font-weight: var(--font-weight-medium);
+  }
+
+  .card .card-body p {
+    font-weight: var(--font-weight-normal);
+    color: var(--charcoal-blue);
+  }
+
+  .card .card-body p:hover {
+    color: var(--maroon);
+  }
+
+
+  .card .efficacy-badge {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    color: white;
+    top: 10px;
+    right: 0;
+    z-index: 100;
+    padding: 8px 30px 8px 12px;
+    border-radius: 6px 0 0 6px;
+    white-space: nowrap;
+    left: calc(100% - 120px);
+    transition: left .65s ease;
+    width: fit-content;
+  }
+
+  .card:hover .efficacy-badge {
+    left: calc(100% - 36px);
+  }
+
+
+  .card .efficacy-badge.strong {
+    background-color: var(--red);
+  }
+
+  .card .efficacy-badge.moderate {
+    background-color: var(--orange-red);
+  }
+
+  .card .efficacy-badge.effective {
+    background-color: var(--bright-yellow);
+  }
+
+  .card .efficacy-badge .flag {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    content: url("/icons/flag.svg");
+  }
+
+  .card .efficacy-badge:not(.strong) .flag {
+    filter: invert(1);
+  }
+
+  .card .efficacy-badge .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    border: 0;
+  }
+
+  .card .efficacy-badge p {
+    margin: 0;
+    padding: 0;
+    margin-left: 8px;
+    font-weight: 400;
+  }
+
+  .card .efficacy-badge:not(.strong) p {
+    filter: invert(1);
+  }
+}
+
+@media screen and (width >=568px) {
+  .cards:not(.suggested-videos) {
+    .card {
+      width: 50%;
+    }
+  }
+}
+
+
+@media screen and (width >=992px) {
+  .cards:not(.suggested-videos) {
+    .card {
+      width: 33.3333%;
+    }
+  }
+}
+
 .cards.suggested-videos {
   margin: 20px 0;
-}
 
-.cards.suggested-videos h3 {
-  font-family: var(--body-font-family);
-  font-size: var(--body-font-size-m);
-  font-weight: var(--font-weight-medium);
-  color: inherit;
-}
+  h3 {
+    font-family: var(--body-font-family);
+    font-size: var(--body-font-size-m);
+    font-weight: var(--font-weight-medium);
+    color: inherit;
+  }
 
-.cards.suggested-videos .card-wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+  .card-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.cards.suggested-videos .card.block {
-  width: 100%;
-  border-top: 1px solid var(--light-grey);
-  padding: 25px 0;
-}
+  .card.block {
+    width: 100%;
+    border-top: 1px solid var(--light-grey);
+    padding: 25px 0;
+  }
 
-.cards.suggested-videos .card.block:last-of-type {
-  border-bottom: 1px solid var(--light-grey);
-}
+  .card.block:last-of-type {
+    border-bottom: 1px solid var(--light-grey);
+  }
 
-.cards.suggested-videos .card.block>div {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
+  .card.block>div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
 
-.cards.suggested-videos .card img::before {
-  display: inline-block;
-  width: auto;
-  height: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color: #888;
-  line-height: 1;
-  z-index: 2;
-  font-size: 2em;
-  margin-top: -25px;
-  margin-left: -15px;
-}
+  .card img::before {
+    display: inline-block;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #888;
+    line-height: 1;
+    z-index: 2;
+    font-size: 2em;
+    margin-top: -25px;
+    margin-left: -15px;
+  }
 
-.cards.suggested-videos .card > a {
-  display: block;
-  pointer-events: none;
-  text-align: center;
-}
+  .card>a {
+    display: block;
+    pointer-events: none;
+    text-align: center;
+  }
 
-.cards.suggested-videos .card > a picture {
-  width: 80px;
-  height: 80px;
-  margin: 0 auto;
-}
+  .card>a picture {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+  }
 
-.cards.suggested-videos .card>a img {
-  border-radius: 50%;
-  position: relative;
-  left: 0;
-  width: 80px;
-  height: 80px;
-  object-fit: cover;
-}
+  .card>a img {
+    border-radius: 50%;
+    position: relative;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+  }
 
-.cards.suggested-videos .card .card-body {
-  display: flex;
-  position: relative;
-}
+  .card .card-body {
+    display: flex;
+    position: relative;
+  }
 
-.cards.suggested-videos .card .card-body h3 {
-  font-weight: var(--font-weight-extra-bold);
-}
+  .card .card-body h3 {
+    font-weight: var(--font-weight-extra-bold);
+  }
 
-.cards.suggested-videos .card .card-body a{
-  display: none;
-}
+  .card .card-body a {
+    display: none;
+  }
 
-/* just show the first a */
-.cards.suggested-videos .card .card-body a:first-of-type {
-  display: flex;
-  text-decoration: none;
+  /* just show the first a */
+  .card .card-body a:first-of-type {
+    display: flex;
+    text-decoration: none;
+  }
 }
