--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -18,6 +18,10 @@
     text-decoration: none;
 }
 
+.card .card-thumbnail {
+    position: relative;
+}
+
 .card .card-body p {
     font-weight: var(--font-weight-normal);
     color: var(--charcoal-blue);
