--- a/blocks/videos-filter/videos-filter.css
+++ b/blocks/videos-filter/videos-filter.css
@@ -1,4 +1,4 @@
-.videos-filter .card .card-thumbnail a::before {
+.videos-filter .card .card-thumbnail a::before, .videos-filter .card .card-thumbnail a::after {
   content: url("/icons/circle-play.svg");
   display: block;
   padding-top: 56.25%;
@@ -10,21 +10,20 @@
   margin-left: -25px;
   width: 60px;
   z-index: 1;
-  transform: translateY(-42%);
+  top: -50%;
   transition: all .4s; /* Add transition property here */
 }
 
-.videos-filter .card:hover .card-thumbnail a::before {
-  animation: changeContent 0.4s linear forwards;
-  animation-fill-mode: forwards;
+.videos-filter .card .card-thumbnail a::after {
+  content: url("/icons/circle-play-red.svg");
+  top:-50%;
+  opacity: 0;
 }
 
-@keyframes changeContent {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-    content: url("/icons/circle-play-red.svg");
-  }
+.videos-filter .card:hover .card-thumbnail a::before {
+  opacity: 0;
 }
+
+.videos-filter .card:hover .card-thumbnail a::after {
+  opacity: 1;
+} 
