--- a/blocks/videos-filter/videos-filter.css
+++ b/blocks/videos-filter/videos-filter.css
@@ -1,4 +1,43 @@
-.videos-filter .card .card-thumbnail a::before, .videos-filter .card .card-thumbnail a::after {
+.videos-filter form {
+  margin-top: 20px;
+
+  .select-position {
+    padding-left: 10px;
+    position: relative;
+  }
+
+  select {
+    border: 3px solid #56514d !important;
+    height: 45px;
+    background: #56514d;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 5px;
+    line-height: 39px;
+    text-align: left;
+    padding: 0;
+    display: inline-block;
+    text-transform: uppercase;
+    cursor: pointer;
+    text-decoration: none;
+    transition: color 0.4s, background-color 0.4s;
+    font-size: 14px;
+    width: 173.85px;
+    appearance: none;
+  }
+
+  select::after {
+    content: url("/icons/arrow-down.svg");
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+}
+
+.videos-filter .card .card-thumbnail a::before,
+.videos-filter .card .card-thumbnail a::after {
   content: url("/icons/circle-play.svg");
   display: block;
   padding-top: 56.25%;
@@ -11,12 +50,13 @@
   width: 60px;
   z-index: 1;
   top: -50%;
-  transition: all .4s; /* Add transition property here */
+  transition: all .4s;
+  /* Add transition property here */
 }
 
 .videos-filter .card .card-thumbnail a::after {
   content: url("/icons/circle-play-red.svg");
-  top:-50%;
+  top: -50%;
   opacity: 0;
 }
 
@@ -26,4 +66,4 @@
 
 .videos-filter .card:hover .card-thumbnail a::after {
   opacity: 1;
-} 
+}
