--- a/templates/blog-article/blog-article.css
+++ b/templates/blog-article/blog-article.css
@@ -50,27 +50,28 @@
     .blog-article main {
         display: grid;
         grid-template-areas:
-        "breadcrumb breadcrumb"
-        "content sidebar"
-    "content sidebar";
+        "breadcrumb breadcrumb breadcrumb breadcrumb"
+        ". content sidebar ."
+         ". content sidebar .";
+        grid-template-columns: 1fr 660px minmax(0, 280px) 1fr;
         column-gap: 40px;
         position: relative;
         max-width: unset;
 
-        .section-outer:not(last-of-type) {
-            grid-area: auto / content;
-            max-width: 660px;
-            justify-self: end;
-            grid-template-rows: max-content;
-        }
+        .section-outer {
+            > .section {
+                padding: 0;
+            }
 
-        .section-outer:last-of-type {
-            grid-area: sidebar;
-            justify-self: start;
-            grid-row-end: last-line;
+            &:not(last-of-type) {
+                grid-area: auto / content;
+                display: grid;
+                grid-template-rows: max-content;
+            }
 
-            .section {
-                width: 240px;
+            &:last-of-type {
+                grid-area: sidebar;
+                grid-row-end: last-line;
             }
         }
     }
@@ -78,13 +79,16 @@
 
 @media (width >= 1200px) {
     .blog-article main {
-        .section-outer:not(last-of-type) {
-            max-width: 800px;
-        }
+        grid-template-columns: 1fr minmax(0, 800px) 300px 1fr;
 
-        .section-outer:last-of-type .section {
-            width: 320px;
-            margin-top: 80px;
+        .section-outer:not(last-of-type) {
+            margin-left: auto;
         }
+    }
+}
+
+@media (width >= 1660px) {
+    .blog-article main {
+        column-gap: 60px;
     }
 }
