--- a/styles/styles.css
+++ b/styles/styles.css
@@ -510,6 +510,10 @@ body.purple {
   .breadcrumbs-outer {
     background-color: var(--purple);
   }
+
+  a {
+    color: var(--royal-blue);
+  }
 }
 
 [data-theme="purple"] {
