--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -716,7 +716,7 @@ nav[aria-expanded="false"] {
     position: relative;
     display: block;
     width: 100%;
-    background-color: rgb(239, 239, 239);
+    background-color: var(--light-gray);
 
     & .main-menu-section {
       display: none;
@@ -764,7 +764,7 @@ nav[aria-expanded="false"] {
   .nav-sections ul.primary-nav-items>li:not(.button-container)>a:not(.button) {
     width: 90%;
     padding-bottom: 15%;
-    border-bottom: 2px solid rgb(239, 239, 239);
+    border-bottom: 2px solid var(--light-gray);
   }
 
   .nav-sections ul.primary-nav-items>li:not(.button-container)>a:not(.button)::after {
