--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -56,7 +56,7 @@ header .nav-sections {
   display: none;
   align-items: center;
   float: right;
-  padding-left: 15px;
+  padding: 0 15px;
   height: 100%;
 }
 
@@ -440,7 +440,7 @@ header .megamenu>.section-outer {
   max-height: 90%;
 }
 
-.header .megamenu .columns-container.content-cards .columns>div {
+.header .megamenu .columns-container.content-cards .columns>div, header.header-mobile .nav-sections .default-content-wrapper > p:last-child {
   background-color: #314091;
   color: white;
   border-radius: 10px;
@@ -469,6 +469,7 @@ header .megamenu>.section-outer {
     color: white;
     align-items: center;
     justify-content: center;
+    background-color: inherit;
   }
 
   a::after {
@@ -478,6 +479,14 @@ header .megamenu>.section-outer {
     height: 20px;
     position: relative;
     display: block;
+  }
+}
+
+header.header-mobile .nav-sections .default-content-wrapper > p:last-child  {
+  width: 90%;
+
+  a::after {
+    content: none !important;
   }
 }
 
@@ -578,9 +587,48 @@ nav[aria-expanded="false"] {
     display: block;
     width: 100%;
     position: relative;
+    height: auto;
 
     a {
       font-family: var(--body-font-family);
+    }
+
+    > .section > .default-content-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+
+      /* add 25px padding to the top of the second element */
+      > :nth-child(2) {
+        padding-top: 25px;
+      }
+
+      >p, >p a {
+        display: flex;
+        gap: 10px;
+        color: inherit;
+      }
+
+      /* make flex direction column for the last p */
+      >p:last-child {
+        flex-direction: column;
+        gap:0;
+        border: 2px solid transparent;
+
+        br {
+          display: none;
+        }
+
+        >a {
+          text-decoration: none;
+          color: white;
+        }
+
+        /* first child bolder */
+        >a:first-child {
+          font-weight: 600;
+        }
+      }
     }
   }
 
