--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -723,8 +723,8 @@ nav[aria-expanded="false"] {
 
       }
 
-      .section>* {
-        width: 95% !important;
+      .columns-container:not(.content-cards)>div:last-child.default-content-wrapper {
+        width: 100%;
       }
     }
 
