--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -601,7 +601,7 @@ nav[aria-expanded="false"] {
 
       /* add 25px padding to the top of the second element */
       > :nth-child(2) {
-        padding-top: 25px;
+        padding-top: 10%;
       }
 
       >p, >p a {
