--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -812,13 +812,15 @@ nav[aria-expanded="false"] {
 
   .nav-sections ul.primary-nav-items>li:not(.button-container)>a:not(.button) {
     width: 100%;
-    padding-bottom: 15%;
     border-bottom: 2px solid var(--divider-gray);
+    margin: auto 0;
+    padding-bottom: 50px;
   }
 
   .nav-sections ul.primary-nav-items>li:not(.button-container)>a:not(.button)::after {
-    transform: translate(0, 0) scale(0.45);
+    transform: translate(0, -75%) scale(0.45);
     right: 10px;
+    top: 50%;
   }
 
   .nav-sections ul.primary-nav-items .megamenu-container.active {
